provisioning/bootstrap/project/roles/k8s_masters/files/bookinfo-policy-projectcalico.org.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: dev1
spec:
  selector: all()
  types:
  - Ingress
  - Egress
