provisioning/bootstrap/project/roles/k8s_masters/files/bookinfo-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev1-default-deny
  namespace: dev1
spec:
  podSelector:
    matchLabels: {}
---
